--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,7 +36,8 @@
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
-      "problemMatcher": "$msCompile"
+      "problemMatcher": "$msCompile",
+      "options": { "cwd": "${workspaceFolder}/Projects/QLYTEVNPT/bin/Debug/net6.0/AppMvc.Net.dll" },
     }
   ]
 }
