--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppMvcConnectionString" : "Data Source=localhost,1433; Initial Catalog=appmvc; User ID=SA;Password=Password123"
+    "AppMvcConnectionString" : "Data Source=146.190.108.6,4001; Initial Catalog=appmvc; User ID=SA;Password=Password123"
   },
 
   "MailSettings": {
